stopped wiki page collapsing on mobile

--- a/web/wiki/style.css
+++ b/web/wiki/style.css
@@ -1,7 +1,6 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
